# paste-rs

./: Cargo.toml  README.md
src/: api.rs  cli.rs  data.rs  files.rs  main.rs
