[package]
name = "paste-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
open = "5.1.2"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.2"
